# projects

./: .gitignore  ODD-EVEN  OE.c  README.md  iteration.c  readme.md  tet_spec
Awk/: data  data_adv  oreilly.awk
Bash/: addtime.sh  cropdir.sh  fsplit.sh  rname.sh
Bash/ANSI/: ANSI.sh  ANSI_formats.tsv  ANSI_set.tsv
Bash/ANSI_test/: ANSI_formats.sh  ANSI_set
Bash/conv/: conv.sh  data.txt  result.tsv
Bash/fsplit/: fsplit.sh
C/: addtime.c  bTree.c  cat.c  dnscheck.c  fibo.c  log.c  ls.c  onexit.c  tree.c  wc.c
C/addtime/: addtime  addtime.c  frontend.py  gaddtime.py  gui.glade  sc_addtime.c
C/bTree/: Makefile  bTree.c  bTree.h  main.c
C/fibonacci/: .fibo.c.swp  fibo  fibo.c
C/linkedlist/: Makefile  core  intList.c  intList.h  main.c  testing.c
C/shell/: csh_exec.h  shell.c  shell_exec.h  tokenizer.h
Cpp/: addtime.cpp  fibo.cpp  reSort.cpp
Cpp/Qaddtime/: Qaddtime.pro  main.cpp  (+3 more)
Go/: crawler.go
Kotlin/: addtime.kt
Lisp/: addtime.lisp  fibo.lisp
Lua/: addtime.lua
Nim/: addtime  addtime.nim
Perl/: addtime.pl6
Python/: addtime.py  envrun.py  kmp.py  mol.py
Raku/: addtime.p6
Ruby/: addtime.rb  cmd.rb  com.rb  rname.rb
Rust/: addtime  addtime.rs
Rust/rname/: Cargo.toml
Rust/rname/rname/: Cargo.toml
Rust/rname/rname/src/: lib.rs
Rust/rname/src/: daemon.rs  lib.rs  main.rs  rname.rs
Rust/rname/src/client/: main.rs
Rust/rname/src/daemon/: main.rs
Rust/thread/chat/: Cargo.toml
Rust/thread/chat/src/: client.rs  common.rs  server.rs  util.rs
Rust/thread/chat/src/client/: main.rs
Rust/thread/chat/src/server/: main.rs
(+308 files in other folders)
