[package]
name = "rname"
version = "0.1.0"
authors = ["Catamondium <30911915+Catamondium@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
regex = "1"
getopts = {version = "0.2", optional = true} # client
inotify = {version = "0.7", optional = true} # daemon
daemonize = {version = "0.4", optional = true} # daemon

[features]
build-bin = ["getopts"]
build-daemon = ["inotify", "daemonize"]

[lib]
name = "rname"
path = "src/rname.rs"

[[bin]]
name = "rname"
path = "src/client/main.rs"
required-features = ["build-bin"]

[[bin]]
name = "rname_daemon"
path = "src/daemon/main.rs"
required-features = ["build-daemon"]
