[package]
name = "chat"
version = "0.1.0"
authors = ["Catamondium <30911915+Catamondium@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]

[lib]
name = "common"
path = "src/common.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"